# imageregistration

./: .clang-format  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
cmake/: GDrive.cmake  Helpers.cmake
config/: imageregistration.json
previous/: CMakeLists.txt
previous/lib/: CMakeLists.txt
previous/lib/src/imgreg/: registration.cpp  registration.h
previous/lib/src/imgreg/features/: features.cpp  features.h
previous/lib/src/imgreg/featuring/: featuring.h
previous/lib/src/imgreg/featuring/orb/: orb_featuring.cpp  orb_featuring.h
previous/lib/src/imgreg/featuring/surf/: sift_featuring.cpp.orig  sift_featuring.h.orig  surf_featuring.cpp  surf_featuring.h
previous/lib/src/imgreg/homography/: homography.cpp  homography.h
previous/lib/src/imgreg/matching/: matching.h
previous/lib/src/imgreg/matching/knn/: knn_matching.cpp  knn_matching.h
previous/lib/src/imgreg/pipeline/: pipeline.cpp  pipeline.h
previous/lib/src/imgreg/warping/: warping.h
previous/lib/src/imgreg/warping/perspective/: perspective_warping.cpp  perspective_warping.h
previous/test/: CMakeLists.txt  test.cpp
previous/test/featuring/: implementation_test.cpp
previous/test/homography/: homography.cpp
previous/test/matching/: matching.cpp
previous/test/pipeline/: pipeline.cpp
previous/test/warping/: warping.cpp
source/: CMakeLists.txt
source/app/: CMakeLists.txt
source/app/src/: main.cpp
source/core/: CMakeLists.txt
source/core/include/stitching/core/: factory.h  features.h  hypothesis.h  ifeatures.h  ifeaturing.h  ihomography.h  image.h  imatching.h  ipipeline.h  isegmentation.h  istitcher.h  iwarping.h  logging.h  segmentationResult.h
source/core/src/: logging.cpp
source/features/: CMakeLists.txt
source/features/include/stitching/features/: features.h
source/features/source/: features.cpp
source/featuring/: CMakeLists.txt
source/featuring/include/stitching/featuring/orb/: orb_featuring.h
source/featuring/include/stitching/featuring/surf/: surf_featuring.h
source/featuring/source/orb/: orb_featuring.cpp
source/featuring/source/surf/: surf_featuring.cpp
source/featuring/tests/: CMakeLists.txt  featuring_test.cpp
source/homography/: CMakeLists.txt
source/homography/include/stitching/homography/: homography.h
source/homography/src/: homography.cpp
source/homography/tests/: CMakeLists.txt  homography_test.cpp
source/main/: CMakeLists.txt
source/main/src/: main.cpp
source/matching/: CMakeLists.txt
source/matching/include/stitching/matching/: knn_matching.h
source/matching/src/: knn_matching.cpp
source/matching/tests/: CMakeLists.txt  matching_test.cpp
source/multiregistration/: CMakeLists.txt
source/multiregistration/include/stitching/multiregistration/: multiregistration.h
source/multiregistration/src/: multiregistration.cpp
source/pipeline/: CMakeLists.txt
source/pipeline/include/stitching/pipeline/: pipeline.h
source/pipeline/src/: pipeline.cpp
source/pipeline/test/: CMakeLists.txt  class_test_pipeline.cpp  pipeline_test.cpp
source/segmentation/: CMakeLists.txt
source/segmentation/include/stitching/segmentation/: segmentation.h
source/segmentation/src/: segmentation.cpp
source/segmentation/tests/: CMakeLists.txt  segmentation_test.cpp
source/simplestitcher/: CMakeLists.txt
source/simplestitcher/include/stitching/stitcher/: simplestitcher.h
source/simplestitcher/src/: simplestitcher.cpp
source/stitcher/: CMakeLists.txt
source/stitcher/include/stitching/stitcher/: simplestitcher.h  typedefinitions.h
source/stitcher/src/: simplestitcher.cpp  typedeclarations.cpp
source/tests/: CMakeLists.txt  factory_test.cpp  factory_test2.cpp  stitching_test.cpp
source/warping/: CMakeLists.txt
source/warping/include/stitching/warping/: warping.h
source/warping/src/: warping.cpp
source/warping/tests/: CMakeLists.txt  warping_test.cpp
